# agentic-rag-knowledge-ai-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/skills/domain-pack/: SKILL.md
.claude/skills/domain-pack/scripts/: validate_domain_pack.py
.claude/skills/domain-pack/templates/: domain.yaml  metrics.yaml  ontology.cypher
.claude/skills/pr-review/: SKILL.md
.claude/skills/preflight/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/ship/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  ct.yml  keepalive.yml  pages.yml  promote.yml
adapters/: __init__.py  _http.py  base.py  budget.py  cohere.py  config.py  elevenlabs.py  factory.py  fakes.py  groq.py  groq_whisper.py  neo4j_store.py  observability.py  qdrant_store.py  voyage.py  voyage_rerank.py
api/: __init__.py  app.py  auth.py  deps.py  ratelimit.py  resilience.py
channels/: __init__.py  telegram_bot.py
data/: __init__.py  catalog.py  contracts.py  enrichment.py  introspect.py  lakehouse.py  metrics.py  product_features.json
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/: exposures.yml  schema.yml  sources.yml
dbt/models/marts/: products.sql  sales.sql  stores.sql  suppliers.sql
dbt/models/silver/: silver_products.sql  silver_sales.sql  silver_stores.sql  silver_suppliers.sql
dbt/models/staging/: bronze_products.sql  bronze_sales.sql  bronze_stores.sql  bronze_suppliers.sql
dbt/tests/generic/: is_masked.sql
docs/: ARCHITECTURE.md  BUILD-PLAN.md  DEPLOY.md  DEV-NOTES.md  README.md  SHOWCASE-ROADMAP.md  adr-enrichment.md  adr-services.md  aws-portability.md  cost-and-business-metrics.md  eval-report.md  eval-routing-findings.md  fallbacks.md  mlops-lifecycle.md  model-lifecycle-and-operations.md  model-selection.md  omni-agent-plan.md  omni-plan-v2.md  production-readiness-plan.md  prompt-optimization.md  rfc-behavioral-insights.md  semantic-layer.md  verification-findings.md
docs/mlops/: drift-report.json  experiments.md
docs/plan/: README.md
docs/plan/stages/: T1.1-dbt-medallion.md  T1.2-semantic-layer.md  T2-sample-data.md  T3-langfuse.md  T4-guided-experience.md  T5-reproducibility-tests.md  T6-story.md
domains/apparel_ecommerce/: domain.yaml  metrics.yaml  ontology.cypher
domains/apparel_ecommerce/eval/: conversations.json  golden.jsonl  routing.jsonl
domains/apparel_ecommerce/seed/: analytics.json
domains/apparel_ecommerce/seed/structured/: products.csv  sales.csv  stores.csv  suppliers.csv
domains/apparel_ecommerce/tools/: build_golden.py  gen_analytics.py  gen_backoffice.py  gen_catalog.py  gen_expertise.py
domains/saas_support/: domain.yaml  metrics.yaml  ontology.cypher
domains/saas_support/eval/: golden.jsonl
evaluation/: __init__.py  agent_eval.py  ci_gate.py  golden.py  harness.py  metrics.py  monitoring.py  ragas_eval.py  report.py
evaluation/fixtures/: gate.json
evaluation/reports/: cost_model.json  gpt_oss_swap_ab.json  prompt_opt.json  rerank_skip_calibration.json  routing_eval.json  site_stats.json
ingest/: __init__.py  chunk.py  naming.py
knowledge/: __init__.py  entity_linking.py  graph_loader.py
mcp_server/: __init__.py  server.py
mlops/: __init__.py  consolidate.py  cost_model.py  ct.py  drift.py  faithfulness.py  learning_curve.py  mlflow_sink.py  model_map.py  model_registry.py  notify.py  prompt_opt.py  shadow.py  staleness.py
mlops/prompt_registry/: tiebreak_system.candidate.json
notebooks/: 01-data-architecture.ipynb  02-evaluation.ipynb  03-continuous-training.ipynb  README.md
pipeline/: __init__.py  answer.py  sanitize.py
rag/: __init__.py  agent.py  answer_cache.py  flywheel.py  graph.py  graph_brain.py  guards.py  hitl.py  omni.py  roles.py  router.py  specialists.py  state.py  supervisor.py  tools.py  understand.py
retrieval/: __init__.py  graph.py  metric_router.py  sparse.py
scripts/: ask.py  build_graph.py  build_lakehouse.py  build_site_stats.py  check_domain_leak.py  dbt_codegen.py  doctor.py  ingest.py  keepalive.py  log_mlflow.py  probe_conversation.py  promote_model.py  promote_registry.py  run_ablation.py  run_agent_eval.py  run_consolidate.py  run_ct.py  run_drift.py  run_enrichment.py  run_eval.py  run_faithfulness.py  run_gate.py  run_ingest.py  run_prompt_opt.py  run_ragas.py  run_shadow.py
showcase/: _quarto.yml  architecture.qmd  cost.qmd  custom.scss  data.qmd  decisions.qmd  evaluation.qmd  experience.qmd  index.qmd  mcp.qmd  mlops.qmd  reliability.qmd  usage.qmd
tests/: conftest.py  test_ablation.py  test_adapters.py  test_agent.py  test_agent_eval.py  test_answer_cache.py  test_api.py  test_budget.py  test_chunk.py  test_ci_gate.py  test_cohere_adapter.py  test_comparison_followup.py  test_consolidate.py  test_cost_measured.py  test_cost_model.py  test_ct.py  test_dbt_parity.py  test_doctor.py  test_domains.py  test_drift.py  test_enrichment.py  test_entity_linking.py  test_eval.py  test_faithfulness.py  test_flywheel.py  test_gender.py  test_golden.py  test_golden_corpus.py  test_graph_brain.py  test_graph_loader.py  test_graph_retriever.py  test_groq.py  test_grounding.py  test_guards.py  test_hitl.py  test_introspect.py  test_keepalive.py  test_lakehouse.py  test_language_filter.py  test_lifecycle_extras.py  (+38 more)
web/: .env.example  package-lock.json  package.json
web/app/: Avatar.tsx  ChatProvider.tsx  ChatWidget.tsx  ImageTile.tsx  InfoPage.tsx  Landing.tsx  StoreFooter.tsx  StoreHeader.tsx  cart.tsx  catalog.ts  gate.tsx  globals.css  layout.tsx  markdown.tsx  page.tsx  robots.ts  turnstile.tsx
web/app/admin/: Hint.tsx  charts.tsx  nav.tsx  page.tsx
web/app/admin/analytics/: page.tsx
web/app/cart/: page.tsx
web/app/checkout/: page.tsx
web/app/contact/: page.tsx
web/app/help/: page.tsx
web/app/membership/: page.tsx
web/app/payment/: page.tsx
web/app/shipping/: page.tsx
web/app/size-guide/: page.tsx
(+25 files in other folders)
