# Project metadata and dependencies, managed by uv. The exact versions are pinned in
# uv.lock (committed), so installs are reproducible. This file holds the ranges.

[project]
name = "skein-lite"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "duckdb>=1.5.4",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langgraph>=1.2.7",
    "mlflow-skinny>=3.14.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

# This is an application, not a library. Do not try to build or install it as a package.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["adapters", "ingest", "retrieval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
