# Project metadata and dependencies, managed by uv. The exact versions are pinned in
# uv.lock (committed), so installs are reproducible. This file holds the ranges.

[project]
name = "skein-lite"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "duckdb>=1.5.4",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain-core>=1.4.0",
    "langfuse>=4.13.0",
    "langgraph>=1.2.7",
    "mlflow-skinny>=3.14.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
# The analytics/semantic layer runs on dbt-duckdb. Kept optional so the offline engine and its
# tests install light; `make dbt-build` and CI pull it in with `uv sync --extra dbt`.
dbt = [
    "dbt-duckdb>=1.9.0",
]
# The notebooks in notebooks/ use matplotlib and pandas for the charts. Kept optional and light
# (no full Jupyter tree; the IDE or an existing jupyter supplies the kernel) so the base stays lean.
notebook = [
    "matplotlib>=3.9",
    "pandas>=2.2",
]

# This is an application, not a library. Do not try to build or install it as a package.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
# Notebooks are exploratory; compact imports and semicolon-joined plotting are idiomatic there and
# should not be held to engine-code style. Domain data generators hold wide tabular literals (one
# product per line) that read better un-wrapped, and they are pack content, not engine code.
extend-exclude = ["notebooks", "domains/*/tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["adapters", "ingest", "retrieval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
