# Project metadata and dependencies, managed by uv. The exact versions are pinned in
# uv.lock (committed), so installs are reproducible. This file holds the ranges.

[project]
name = "skein-lite"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "duckdb>=1.5.4",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langfuse>=4.14.0",
    "mlflow-skinny>=3.14.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.51.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.21",
    # The MCP server (mcp_server/) ships in the repo, so its SDK installs with the dev tooling and
    # tests/test_mcp.py runs in `make check`. Runtime for `make mcp`; the core engine never imports it.
    "mcp>=1.2",
    # LangGraph powers the OPT-IN corrective-RAG lane (rag/graph_brain.py, CHAT_BRAIN=graph). It is a
    # dev/feature dependency, not core: the default deterministic path never imports it, and the base
    # install (uv sync, no extras) has zero LangGraph. Here so tests/test_graph_brain.py runs in
    # `make check`. (langchain-core arrives transitively via langgraph but is never imported.)
    "langgraph>=1.2",
]
# The analytics/semantic layer runs on dbt-duckdb. Kept optional so the offline engine and its
# tests install light; `make dbt-build` and CI pull it in with `uv sync --extra dbt`.
dbt = [
    "dbt-duckdb>=1.9.0",
]
# The notebooks in notebooks/ use matplotlib and pandas for the charts. Kept optional and light
# (no full Jupyter tree; the IDE or an existing jupyter supplies the kernel) so the base stays lean.
notebook = [
    "matplotlib>=3.9",
    "pandas>=2.2",
]
# The Quarto showcase pages run `{python}` chunks that read evaluation/reports/site_stats.json, so
# a headline number is read from one artifact, never hand-typed. Rendering needs a Jupyter kernel;
# kept optional so only the site build (make site / the Pages workflow) pulls it in.
docs = [
    "jupyter>=1.0",
]
# The opt-in LangGraph corrective-RAG lane (rag/graph_brain.py, CHAT_BRAIN=graph). Install just the
# lane with `uv sync --extra graph`; it also ships with the dev extra so `make check` exercises it.
# The base install (no extras) has zero LangGraph and the default path never imports it.
graph = [
    "langgraph>=1.2",
]

# This is an application, not a library. Do not try to build or install it as a package.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
# Notebooks are exploratory; compact imports and semicolon-joined plotting are idiomatic there and
# should not be held to engine-code style. Domain data generators hold wide tabular literals (one
# product per line) that read better un-wrapped, and they are pack content, not engine code.
extend-exclude = ["notebooks", "domains/*/tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["adapters", "ingest", "retrieval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
